--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
-    "next": "14.2.7",
+    "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.78.0",
