--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.78.0"
+    "sass": "^1.78.0",
+    "sass-loader": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
